// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact form renders a contact form 1`] = `
<div
  id="contact-form"
>
  <div
    className="ui container"
  >
    <div
      className="ui icon negative attached message"
    >
      <i
        aria-hidden="true"
        className="warning icon"
        onClick={[Function]}
      />
      <div
        className="content"
      >
        <div
          className="header"
        >
          Error
        </div>
      </div>
    </div>
    <div
      className="ui container"
    >
      <form
        className="ui form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="ui raised segments"
        >
          <div
            className="ui segment"
          >
            <div
              className="ui segment primary"
            >
              Contact form
            </div>
            <div
              className="inline field text"
              id="field-name"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-name"
                        max={null}
                        maxLength={null}
                        min={null}
                        minLength={null}
                        name="name"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        step={null}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field text"
              id="field-from"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-from"
                      >
                        From
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-from"
                        max={null}
                        maxLength={null}
                        min={null}
                        minLength={null}
                        name="from"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        step={null}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline field text"
              id="field-subject"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-subject"
                      >
                        Subject
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-subject"
                        max={null}
                        maxLength={null}
                        min={null}
                        minLength={null}
                        name="subject"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        step={null}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field textarea"
              id="field-message"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-message"
                      >
                        Message
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <textarea
                      disabled={false}
                      id="field-message"
                      name="message"
                      onChange={[Function]}
                      onInput={[Function]}
                      rows={3}
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ui clearing segment actions"
          >
            <button
              aria-label="Send"
              className="ui basic primary right floated button"
              onClick={[Function]}
              title="Send"
              type="submit"
            >
              <svg
                className="icon circled"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                onClick={null}
                style={
                  Object {
                    "fill": "currentColor",
                    "height": "30px",
                    "width": "auto",
                  }
                }
                viewBox=""
                xmlns=""
              />
            </button>
            <button
              aria-label="Cancel"
              className="ui basic secondary right floated button"
              onClick={[Function]}
              title="Cancel"
            >
              <svg
                className="icon circled"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                onClick={null}
                style={
                  Object {
                    "fill": "currentColor",
                    "height": "30px",
                    "width": "auto",
                  }
                }
                viewBox=""
                xmlns=""
              />
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      id="Portal"
    />
  </div>
</div>
`;

exports[`Contact form renders a contact form with error message 1`] = `
<div
  id="contact-form"
>
  <div
    className="ui container"
  >
    <div
      className="ui icon negative attached message"
    >
      <i
        aria-hidden="true"
        className="warning icon"
        onClick={[Function]}
      />
      <div
        className="content"
      >
        <div
          className="header"
        >
          Error
        </div>
        <p>
          Error foo
        </p>
      </div>
    </div>
    <div
      className="ui container"
    >
      <form
        className="ui form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="ui raised segments"
        >
          <div
            className="ui segment"
          >
            <div
              className="ui segment primary"
            >
              Contact form
            </div>
            <div
              className="inline field text"
              id="field-name"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-name"
                        max={null}
                        maxLength={null}
                        min={null}
                        minLength={null}
                        name="name"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        step={null}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field text"
              id="field-from"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-from"
                      >
                        From
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-from"
                        max={null}
                        maxLength={null}
                        min={null}
                        minLength={null}
                        name="from"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        step={null}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline field text"
              id="field-subject"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-subject"
                      >
                        Subject
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <div
                      className="ui input"
                    >
                      <input
                        disabled={false}
                        id="field-subject"
                        max={null}
                        maxLength={null}
                        min={null}
                        minLength={null}
                        name="subject"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        step={null}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="inline required field textarea"
              id="field-message"
            >
              <div
                className="ui grid"
              >
                <div
                  className="stretched row"
                >
                  <div
                    className="four wide column"
                  >
                    <div
                      className="wrapper"
                    >
                      <label
                        htmlFor="field-message"
                      >
                        Message
                      </label>
                    </div>
                  </div>
                  <div
                    className="eight wide column"
                  >
                    <textarea
                      disabled={false}
                      id="field-message"
                      name="message"
                      onChange={[Function]}
                      onInput={[Function]}
                      rows={3}
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ui clearing segment actions"
          >
            <button
              aria-label="Send"
              className="ui basic primary right floated button"
              onClick={[Function]}
              title="Send"
              type="submit"
            >
              <svg
                className="icon circled"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                onClick={null}
                style={
                  Object {
                    "fill": "currentColor",
                    "height": "30px",
                    "width": "auto",
                  }
                }
                viewBox=""
                xmlns=""
              />
            </button>
            <button
              aria-label="Cancel"
              className="ui basic secondary right floated button"
              onClick={[Function]}
              title="Cancel"
            >
              <svg
                className="icon circled"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                onClick={null}
                style={
                  Object {
                    "fill": "currentColor",
                    "height": "30px",
                    "width": "auto",
                  }
                }
                viewBox=""
                xmlns=""
              />
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      id="Portal"
    />
  </div>
</div>
`;
